Gnumeric 0.72

Almer:
	* More work on validation.
	* Stf multiple-separators-as-one fix.

Andreas:
	* Rewrite remaining analysis tools
          to use the gnumeric-expr-entry widget.

Jody:
	* Fix color selectors for drawing objects.
	* Re-enable support for row vectors in graphs.
	* Allow string functions to accept numbers as strings.
	* Font selector in cell format dialog
	* Off by 1 error when undoing unhiding cols/rows
	* Improve handling of Cancel during File -> Quit
	* Autoscroll support during object creation
	* Fix MINVERSE
	* CODE assumes unsigned char
	* Improve parser's handling of integers larger than int.
	* Improve cursor & scroll bounds checking.
	* graph leaks.

John Gotts:
	* Make bonobo optional in the sample rpm specfile.

Jukka:
	* Improved COUPDAYS().

Morten:
	* New Search Control Center.

--------------------------------------------------------------------------
Gnumeric 0.71

Almer:
	* Core support for validation and conditional formats.

Andreas:
	* Rewrite descriptive statistics, correlation, covariance,
          and rank analysis tool dialogs to use the gnumeric-expr-entry widget.

Christopher Keith Fairbairn:
	* Add a 'Fill' menu connection to autofill.

Eric Baudais:
	* Improve function documentation generator.

Jody:
	* Enable XL import for graphs.
	* Import/Export/Edit Hidden/Locked attributes.
	* Parse using the assigned fmt before checking the builtins.
	* Enable basic attributes when importing shapes from XL.
	* Add simple bucketing of range dependencies.
	* Formating extensions and corrections.
	* Some simple recalc tuning speeds things up by a factor of 2.
	* Basic version of just in time rendering for another factor of 2.
	* Cleanup the DOM based xml import/export utilities.
	* Remove irritating frame around bonobo objects.
	* Make the sheet object control points prettier.
	* Off by 1 pixel/pt error when handling right/center alignment.
	* Improve sheet object menus.
	* Reworked the Text Combo,
	* Remove the eval queue.